--- a/docs/showcase.mdx
+++ b/docs/showcase.mdx
@@ -1,3 +1,15 @@
 ---
-title: Showcase
+id: showcase
+title: Showcase Page
+description: A working MDX page without errors.
 ---
+
+# Showcase Page
+
+This is an MDX example page.
+MDX allows **JSX components** inside Markdown
+
+<button onClick={() => alert("Hello from Showcase!")}>
+   Click me
+</button>
+
