Navbar docs details

--- a/docs/showcase.mdx
+++ b/docs/showcase.mdx
@@ -4,6 +4,7 @@ title: Showcase Page
 description: A working MDX page without errors.
 ---
 
+
 # Showcase Page
 
 This is an MDX example page.
@@ -12,4 +13,7 @@ MDX allows **JSX components** inside Markdown
 <button onClick={() => alert("Hello from Showcase!")}>
    Click me
 </button>
+
+Here is an example component:
+
 
