--- a/docs/usecode.mdx
+++ b/docs/usecode.mdx
@@ -1,3 +1,12 @@
+---
+title: Code Examples
+description: Interactive code examples and snippets
+---
+
+# Code Examples
+
+Here are some interactive code examples:
+
 import CodeTabs from '@site/src/components/CodeTabs';
 
 <CodeTabs
