--- a/docs/Info.mdx
+++ b/docs/Info.mdx
@@ -1,9 +1,47 @@
+---
+title: Information Guide
+description: Comprehensive information and documentation guide
+sidebar_position: 2
+---
+
+# Information Guide
+
+Welcome to our comprehensive information guide. This section contains important details and documentation.
+
+import FeatureCard from '@site/src/components/FeatureCard';
 import Callout from '@site/src/components/Callout';
 
-<Callout type="info">
- THis ia an information box - perfect foe tips or explanations
- </Callout>
+## Quick Overview
 
- <Callout type="warning">
-  Warning! Make sure to configure your environmemt correctly.
-  </Callout>
+<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(300px, 1fr))', gap: '1rem', margin: '2rem 0'}}>
+  <FeatureCard 
+    title="Getting Started"
+    description="Learn the basics and get up and running quickly"
+    icon="🚀"
+  />
+  <FeatureCard 
+    title="Documentation"
+    description="Comprehensive guides and API references"
+    icon="📚"
+  />
+  <FeatureCard 
+    title="Examples"
+    description="Practical examples and code samples"
+    icon="💡"
+  />
+</div>
+
+<Callout type="info" title="Important Note">
+This information guide is regularly updated. Make sure to check back for the latest updates.
+</Callout>
+
+## Key Features
+
+- **Comprehensive Documentation**: Full coverage of all features
+- **Interactive Examples**: Live code examples and demos
+- **Best Practices**: Recommended approaches and patterns
+- **Troubleshooting**: Common issues and solutions
+
+<Callout type="tip" title="Pro Tip">
+Use the search functionality to quickly find specific information across all documentation.
+</Callout>
